--- a/login.html
+++ b/login.html
@@ -145,5 +145,10 @@
             }
         }
     </script>
+    <script>
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+    </script>
 </body>
 </html>
