--- a/success.html
+++ b/success.html
@@ -68,6 +68,10 @@
           self.close();
         }, 5000 );
         </script>
-        
+        <script>
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+    </script>
 </body>
 </html>
